crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__register_segment__empty_segments_data.snap
---
source: crates/store/dl_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬───────────────────┬──────────────────┐
│ dalaran_segment_id ┆ dalaran_layer_names ┆ dalaran_num_chunks │
╞══════════════════╪═══════════════════╪══════════════════╡
└──────────────────┴───────────────────┴──────────────────┘
