crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__register_segment__out_of_order_properties_manifest_data.snap
---
source: crates/store/dl_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬──────────────────┬──────────────────┬──────────────────┬──────────────────────────────────────────┬───────────────────────────┬──────────────────────────────────────────┐
│ dalaran_layer_name ┆ dalaran_segment_id ┆ dalaran_layer_type ┆ dalaran_num_chunks ┆ dalaran_schema_sha256                      ┆ dalaran_registration_status ┆ property:text_log:TextLog:text           │
╞══════════════════╪══════════════════╪══════════════════╪══════════════════╪══════════════════════════════════════════╪═══════════════════════════╪══════════════════════════════════════════╡
│ prop1            ┆ my_segment_id1   ┆ dlr              ┆ 1                ┆ 90433089a733d463b38411fbda5e7deb84ba382… ┆ done                      ┆ [I was logged first, registered last, s… │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ prop2            ┆ my_segment_id1   ┆ dlr              ┆ 1                ┆ 90433089a733d463b38411fbda5e7deb84ba382… ┆ done                      ┆ [I was logged last, registered first]    │
└──────────────────┴──────────────────┴──────────────────┴──────────────────┴──────────────────────────────────────────┴───────────────────────────┴──────────────────────────────────────────┘
