crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__register_segment__out_of_order_properties_manifest_schema.snap
---
source: crates/store/dl_redap_tests/src/tests/register_segment.rs
expression: batch.format_schema_snapshot()
---
property:text_log:TextLog:text: List(Utf8) [
    rerun:archetype: "rerun.archetypes.TextLog"
    rerun:component: "TextLog:text"
    rerun:component_type: "rerun.components.Text"
    rerun:entity_path: "/__properties/text_log"
    rerun:kind: "data"
]
rerun_last_updated_at: non-null Timestamp(ns)
rerun_layer_name: non-null Utf8
rerun_layer_type: non-null Utf8
rerun_num_chunks: UInt64
rerun_registration_status: non-null Utf8
rerun_registration_time: non-null Timestamp(ns)
rerun_schema_sha256: FixedSizeBinary(32)
rerun_segment_id: non-null Utf8
rerun_size_bytes: UInt64
rerun_storage_url: non-null Utf8
