crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__register_segment__out_of_order_properties_segments_data.snap
---
source: crates/store/dl_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬───────────────────┬──────────────────┬──────────────────────────────────────────┐
│ dalaran_segment_id ┆ dalaran_layer_names ┆ dalaran_num_chunks ┆ property:text_log:TextLog:text           │
╞══════════════════╪═══════════════════╪══════════════════╪══════════════════════════════════════════╡
│ my_segment_id1   ┆ [prop2, prop1]    ┆ 2                ┆ [I was logged first, registered last, s… │
└──────────────────┴───────────────────┴──────────────────┴──────────────────────────────────────────┘
