crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__register_segment__out_of_order_properties_segments_schema.snap
---
source: crates/store/dl_redap_tests/src/tests/register_segment.rs
expression: batch.format_schema_snapshot()
---
property:text_log:TextLog:text: List(Utf8) [
    dalaran:archetype: "dalaran.archetypes.TextLog"
    dalaran:component: "TextLog:text"
    dalaran:component_type: "dalaran.components.Text"
    dalaran:entity_path: "/__properties/text_log"
    dalaran:kind: "data"
]
dalaran_last_updated_at: non-null Timestamp(ns)
dalaran_layer_names: non-null List(non-null Utf8)
dalaran_num_chunks: non-null UInt64
dalaran_segment_id: non-null Utf8
dalaran_size_bytes: non-null UInt64
dalaran_storage_urls: non-null List(non-null Utf8)
