crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__register_segment__segment1_props_should_be_there_segments_data.snap
---
source: crates/store/dl_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬───────────────────┬──────────────────┬────────────────────┐
│ dalaran_segment_id ┆ dalaran_layer_names ┆ dalaran_num_chunks ┆ property:prop:test │
╞══════════════════╪═══════════════════╪══════════════════╪════════════════════╡
│ segment1         ┆ [base]            ┆ 2                ┆ [1.0, 2.0, 3.0]    │
└──────────────────┴───────────────────┴──────────────────┴────────────────────┘
